# bash-backwards

./: .gitignore  COMPARISON.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_PHASE2.md  MIGRATION.md  README.md  convo.2.md  convo.md  plan.md
.github/workflows/: ci.yml
Formula/: hsab.rb
docs/: README.md  async.md  combinators.md  comparison.md  config.md  cookbook.md  customizing-prompts.md  definitions.md  extending-stdlib.md  getting-started.md  http.md  media.md  migration.md  plugins.md  reference.md  repl.md  shell.md  stack.md  structured-data.md
examples/: stdlib.hsabrc
examples/plugins/example/: plugin.toml
issues/: 000-structured-object-model.md  001-record-and-table-types.md  002-format-on-display.md  003-external-command-interop.md
src/: ast.rs  cli.rs  display.rs  emitter.rs  eval.rs  executor.rs  lexer.rs  lib.rs  main.rs  parser.rs  prompt.rs  rcfile.rs  repl.rs  resolver.rs  shell.rs  signals.rs  state.rs  terminal.rs  transformer.rs  util.rs
src/eval/: aggregation.rs  async_ops.rs  bigint.rs  combinators.rs  command.rs  control.rs  encoding.rs  helpers.rs  http.rs  image.rs  list.rs  local.rs  macro_builtins.rs  macros.rs  math.rs  mod.rs  modules.rs  path.rs  plugin.rs  process.rs  serialization.rs  shell.rs  shell_native.rs  snapshot.rs  stack.rs  stats.rs  string.rs  structured.rs  terminal.rs  tests.rs  vector.rs  watch.rs
src/plugin/: abi.rs  host.rs  hot_reload.rs  imports.rs  loader.rs  manifest.rs  mod.rs  registry.rs
tests/: integration_tests.rs  test_apply_peek.rs  test_arithmetic.rs  test_async.rs  test_bigint.rs  test_block_syntax.rs  test_cli.rs  test_combinators.rs  test_control.rs  test_dynamic_patterns.rs  test_encoding.rs  test_functional.rs  test_http.rs  test_image.rs  test_jobs.rs  test_local.rs  test_macro_builtins.rs  test_modules.rs  test_predicates.rs  test_serialization_naming.rs  test_shell.rs  test_shell_native.rs  test_stack.rs  test_stats.rs  test_string.rs  test_structured.rs  test_symbol_arithmetic.rs  test_table_ops.rs  test_type_logic.rs  test_unification.rs  test_unified_control.rs  test_vector.rs
tests/common/: mod.rs
tests/fixtures/: sample.hsab
