[package]
name = "hsab"
version = "0.1.0"
edition = "2021"
description = "Hash Backwards - A postfix notation shell"
license = "MIT"

[dependencies]
nom = "7"
rustyline = "12"
thiserror = "1"
glob = "0.3"
serde_json = "1.0"
ctrlc = "3.4"
chrono = "0.4"
hostname = "0.4"
terminal_size = "0.4"

# Plugin system dependencies (optional)
wasmer = { version = "4.2", optional = true }
notify = { version = "6.1", optional = true }
toml = { version = "0.8", optional = true }
semver = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["plugins"]
plugins = ["wasmer", "notify", "toml", "semver", "serde"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
